--- a/.jshintrc
+++ b/.jshintrc
@@ -1,19 +1,26 @@
 {
-  "globals": {
-    "document": false,
-    "Airbnb": false,
-    "I18n": false,
-    "$": false,
-    "jQuery": false,
-    "_": false,
-    "Backbone": false,
-    "require": false,
-    "provide": false,
-    "module": false,
-    "window": false,
-    "console": false
-  },
+  "predef": [
+    "document",
+    "Airbnb",
+    "AirbnbRooms",
+    "I18n",
+    "$",
+    "jQuery",
+    "JST",
+    "JSCookie",
+    "require",
+    "enderRequire",
+    "BootstrapData",
+    "provide",
+    "module",
+    "window",
+    "console",
+    "google"
+  ],
   "expr": true,
   "maxlen": 100,
-  "undef": true
+  "indent": 2,
+  "undef": true,
+  "nomen": false,
+  "esnext": true
 }
