--- a/itermconfig/com.googlecode.iterm2.plist
+++ b/itermconfig/com.googlecode.iterm2.plist
@@ -12,12 +12,20 @@
 	<string>manual</string>
 	<key>Default Bookmark Guid</key>
 	<string>12BC9031-FF09-4133-899C-B73691C0F41E</string>
+	<key>Hotkey</key>
+	<true/>
+	<key>HotkeyChar</key>
+	<integer>116</integer>
+	<key>HotkeyCode</key>
+	<integer>17</integer>
 	<key>HotkeyMigratedFromSingleToMulti</key>
 	<true/>
+	<key>HotkeyModifiers</key>
+	<integer>1319184</integer>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/itermconfig</string>
+	<string>~/.dotfiles/itermconfig</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -52,19 +60,15 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1469 356 445 77 0 0 2304 1273 </string>
+	<string>1169 110 445 103 0 0 1680 1027 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>840 488 700 622 0 0 2304 1273 </string>
-	<key>NSWindow Frame SessionsPreferences</key>
-	<string>501 -954 606 469 331 -1050 1680 1027 </string>
+	<string>558 477 620 392 0 0 1680 1028 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>369 370 796 486 0 0 1920 1177 </string>
+	<string>506 -779 958 470 237 -1050 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>76 23 1844 1154 0 0 1920 1177 </string>
+	<string>56 23 1624 1005 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>76 23 1844 1154 0 0 1920 1177 </string>
-	<key>NSWindow Frame iTerm Window 2</key>
-	<string>80 23 1840 1154 0 0 1920 1177 </string>
+	<string>56 353 905 675 0 0 1680 1028 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -662,11 +666,11 @@
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>4EAC7524-C978-4F86-8A76-64FD3DF7139D</string>
+	<string>44AE11D0-C4B3-41E4-9504-3F62DA6745D3</string>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>525740372.99310601</real>
+	<real>556576877.96625495</real>
 	<key>PMPrintingExpandedStateForPrint2</key>
 	<false/>
 	<key>PasteTabToStringTabStopSize</key>
@@ -705,7 +709,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/gordonkoo/itermconfig</string>
+	<string>/Users/gordonkoo/.dotfiles/itermconfig</string>
 	<key>Print In Black And White</key>
 	<true/>
 	<key>SUEnableAutomaticChecks</key>
@@ -713,11 +717,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=2</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=72</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-08-21T16:36:15Z</date>
+	<date>2018-11-20T09:13:07Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
@@ -731,6 +735,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.2.0</string>
+	<string>3.2.5</string>
 </dict>
 </plist>
